# homeops-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
homeops_mcp/: __init__.py  auth.py  config.py  logging_config.py  main.py  mcp_server.py  metrics.py
homeops_mcp/adapters/: __init__.py  crowdsec_adapter.py  docker_adapter.py  emby_adapter.py  network_adapter.py
homeops_mcp/api/: routes.py
scripts/: generate_env_example.sh  run_local.sh
tests/: conftest.py  test_crowdsec_adapter.py  test_docker_adapter.py  test_emby_adapter.py  test_health.py  test_mcp_server.py  test_metrics.py  test_network_adapter.py
